# nexus-rag-platform

./: .env.docker_example  .env_example  .gitignore  DATABASE_DOCKER_SETUP.md  README.md  compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  app.py  auth_routes.py  (+12 more)
frontend/: .env.example  README.md  VALIDATION.md  package.json  pnpm-lock.yaml  setup.ps1
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  format.ts  types.ts
frontend_contract/: README.md  openapi.json
migrations/: env.py
migrations/versions/: 2235500bc159_add_authentication_tables.py  3b272a9c9495_add_organization_memberships.py  7323c1951e53_create_document_registry_tables.py  7a20ff0951f5_create_document_registry_tables.py
scripts/: create_dev_token.py  export_openapi.py
tests/: test_api_endpoints.py  test_backend_contract.py  test_chroma_store.py  test_database_connection.py  test_database_models.py  test_document_chunker.py  test_document_ingestion_service.py  test_document_management.py  test_document_repository.py  test_gemini_llm_provider.py  test_generation_hardening.py  test_generation_service.py  test_health_endpoints.py  test_huggingface_embeddings.py  test_jwt_auth.py  test_membership_foundation.py  test_metadata_builder.py  test_openai_embeddings.py  test_openai_llm_provider.py  test_pdf_loader.py  test_pdf_parser.py  test_rate_limiting.py  test_real_component_interfaces.py  test_real_document_ingestion.py  test_real_rag_query.py  test_retrieval_service.py  test_role_authorization.py  test_security_middleware.py  test_text_cleaner.py
(+70 files in other folders)
