[project]
name = "rag-app"
version = "0.1.0"
description = "Production-grade retrieval-augmented generation application."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "openai>=2.43.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.3",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]
